Fixing mode info panel spacing for small

--- a/client/src/css/ui.css
+++ b/client/src/css/ui.css
@@ -25,7 +25,7 @@ h3 {
 	position: fixed;
 	display: grid;
 	grid-template-columns: 500px 1fr 300px 50px;
-	grid-template-rows: 128px 1fr 163px;
+	grid-template-rows: 130px 1fr 163px;
 	grid-template-areas:
         "turnInfo turnInfo turnInfo turnInfo"
         "characterInfo . creatureInfo creatureInfo"
@@ -331,7 +331,7 @@ h3 {
 	display: flex;
 	justify-self: center;
 	width: 100%;
-	max-height: 128px;
+	max-height: 130px;
 	border: 2px solid seagreen;
 	border-top: 0;
 	border-radius: 0 0 5px 5px;
@@ -366,7 +366,7 @@ h3 {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	min-width: 160px;
+	min-width: 175px;
 	padding: 10px;
 	border-left: 1px solid seagreen;
 	border-right: 1px solid seagreen;
